--- a/.github/workflows/test_weatherAPI.yaml
+++ b/.github/workflows/test_weatherAPI.yaml
@@ -12,8 +12,11 @@ jobs:
         with:
           python-version: 3.6
       
-      - name: Install tools
+      - name: Install python
         run: python -m pip install --upgrade pip pytest
+       
+      - name: Install pandas
+        run: python -m pip install pandas
       
       - name: Test with unittest
         run: |
