--- a/.github/workflows/test_weatherAPI.yaml
+++ b/.github/workflows/test_weatherAPI.yaml
@@ -17,7 +17,16 @@ jobs:
        
       - name: Install pandas
         run: python -m pip install pandas
-      
+
+      - name: Install requests module
+        run: python -m pip install requests
+        
+      - name: Install sqlalchemy
+        run: python -m pip install sqlalchemy        
+
+      - name: Install requests module
+        run: python -m pip install datetime
+
       - name: Test with unittest
         run: |
           python3 -m unittest test_weatherAPI.py
